# WiffWuff

./: CMakeLists.txt  GameMaster.cpp  GameMaster.h  debug commands  gameSave.cpp  gameSave.h  game_master.cpp  game_master.h  gamemaster.cpp  gamemaster.h  gamesave.cpp  main.cpp  main.out  makefile  todolist
character/: BaseUnit.cpp  BaseUnit.h  Npc.cpp  Npc.h  PlayerCtrl.cpp  PlayerCtrl.h  base_unit.cpp  base_unit.h  baseunit.cpp  baseunit.h  npc.cpp  npc.h  paladin.cpp  paladin.h  player_ctrl.cpp  player_ctrl.h  sorcerer.cpp  sorcerer.h  turtle.cpp  turtle.h  wumpus.cpp  wumpus.h
enviroment/: BaseTile.cpp  BaseTile.h  TileOcean.cpp  TileOcean.h  base_tile.cpp  base_tile.h  basetile.cpp  basetile.h  tile_dark_room.cpp  tile_dark_room.h  tile_escape_win.cpp  tile_escape_win.h  tile_mountain_ridge.cpp  tile_mountain_ridge.h  tile_ocean.cpp  tile_ocean.h  tileocean.cpp  tileocean.h
stuff/: Consumable.cpp  Consumable.h  Item.cpp  Item.h  consumable.cpp  consumable.h  container.cpp  container.h  item.cpp  item.h
